k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: us-central1-docker.pkg.dev/long-door-483809/hello-repo/hello:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "64Mi"
