k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-app
spec:
  type: LoadBalancer
  selector:
    app: hello
  ports:
  - port: 80
    targetPort: 80
